[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bili2text"
version = "2.0.0"
description = "Convert Bilibili videos to text using OpenAI Whisper"
authors = [
    {name = "Lanbin", email = "lanbin@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "annotated-types==0.6.0",
    "argcomplete==3.2.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "decorator==4.4.2",
    "fastapi==0.109.2",
    "filelock==3.16.1",
    "fsspec==2024.9.0",
    "idna==3.7",
    "imageio==2.34.2",
    "imageio-ffmpeg==0.5.1",
    "Jinja2==3.1.4",
    "llvmlite==0.43.0",
    "MarkupSafe==3.0.2",
    "more-itertools==10.5.0",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "networkx==3.4.1",
    "numba==0.60.0",
    "numpy==2.0.0",
    "openai-whisper==20240930",
    "packaging==23.2",
    "pillow==10.4.0",
    "pipx==1.4.3",
    "proglog==0.1.10",
    "pydub==0.25.1",
    "pynput==1.7.6",
    "regex==2024.9.11",
    "requests==2.32.3",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sympy==1.13.1",
    "tiktoken==0.8.0",
    "torch==2.5.0",
    "tqdm==4.66.4",
    "ttkbootstrap==1.10.1",
    "typing_extensions==4.12.2",
    "urllib3==2.2.2",
    "userpath==1.9.1",
    "whisper==1.1.10",
    "you-get==0.4.1743",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.scripts]
bili2text = "main:main"
bili2text-gui = "window:main"

[project.urls]
Homepage = "https://github.com/lanbinleo/bili2text"
Repository = "https://github.com/lanbinleo/bili2text"
Issues = "https://github.com/lanbinleo/bili2text/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true